project/manifests/database-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: project
spec:
  clusterIP: None      # isso é o que o torna "headless"
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
